[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-usage"
dynamic = ["version"]
description = "Scan file-system storage, record results in a database, and serve a live web UI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "Jinja2>=3.1",
    "SQLAlchemy>=2.0",
]

[project.scripts]
storage-usage = "storage_usage:main"

[tool.setuptools]
py-modules = ["storage_usage"]

[tool.setuptools_scm]
write_to = "_version.py"
